Simplify Android build and bring up to date (#273)
* Use latest Android platform and build-tools versions

* Require ANDROID_NDK environment variable instead of ANDROID_NDK_ROOT

* Upgrade gradle wrapper and build.gradle to support gradle 4.4.1 and Android gradle plugin 3.0.1

* Add BoringSSL as a submodule according to https://boringssl.googlesource.com/boringssl/+/HEAD/INCORPORATING.md

* Add build.gradle and dummy manifest for BoringSSL

* Add BoringSSL as a dependency to the main Android themis build.gradle

* Update Circle CI configuration to support updated Android build

* Limit JVM memory for gradle to 1GB

Otherwise, builds are failing with oom

* Disable parallel build for gradle and limit number of workers

* Split Android test into separate build and test stages

Circle CI fails with out of memory. To reduce memory usage we will compile Themis before starting the emulator. This should also fail the build early if there are any issues with Android build without having to wait for emulator to boot (which takes a while).

* Disable gradle deamon in CI

* Limit CMake/Ninja build concurrency for Circle CI builds of BoringSSL for Android

--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,23 @@
-import org.apache.tools.ant.taskdefs.condition.Os
+apply plugin: 'com.android.library'
 
 buildscript {
     repositories {
-        mavenCentral()
+        google()
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
-apply plugin: 'com.android.library'
+dependencies {
+    implementation project(":boringssl")
+}
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
     
     defaultConfig {
     	minSdkVersion 16
@@ -33,37 +36,12 @@ android {
 
 	}
 
-    task ndkBuild(type: Exec) {
-	workingDir 'jni'
-        commandLine getNdkBuildCmd() 
-	if (project.hasProperty('boringssl_path')){
-	    args = ["BORINGSSL_PATH=$boringssl_path"]
+    // ensure we execute boringssl tasks first
+    tasks.whenTaskAdded({Task task -> task.dependsOn('boringssl:' + task.name)})
+
+	externalNativeBuild {
+	    ndkBuild {
+	        path "jni/Android.mk"
+	    }
 	}
-    }
-
-    tasks.withType(JavaCompile) {
-        compileTask -> compileTask.dependsOn ndkBuild
-    }
-
-    task cleanNative(type: Exec) {
-		workingDir 'jni'
-        commandLine getNdkBuildCmd(), 'clean'
-    }
-
-    clean.dependsOn cleanNative
-}
-
-def getNdkDir() {
-    if (System.env.ANDROID_NDK_ROOT != null)
-        return System.env.ANDROID_NDK_ROOT
-        
-    throw new GradleException("NDK location not found. Define location with an ANDROID_NDK_ROOT environment variable.")
-}
-
-def getNdkBuildCmd() {
-    def ndkbuild = getNdkDir() + "/ndk-build"
-    if (Os.isFamily(Os.FAMILY_WINDOWS))
-        ndkbuild += ".cmd"
-
-    return ndkbuild
 }
