--- a/tests/objcthemis/Podfile
+++ b/tests/objcthemis/Podfile
@@ -25,3 +25,12 @@ target :"objthemis" do
   pod 'themis', :git => "https://github.com/cossacklabs/themis.git"
 
 end
+
+post_install do |installer_representation|
+    installer_representation.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
+            config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'SECURE_COMPARATOR_ENABLED'
+        end
+    end
+end
