--- a/docs/examples/swift/Podfile
+++ b/docs/examples/swift/Podfile
@@ -26,3 +26,13 @@ target :"ThemisSwift" do
   pod 'themis', '0.9.6'
 
 end
+
+
+post_install do |installer_representation|
+    installer_representation.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
+            config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'SECURE_COMPARATOR_ENABLED'
+        end
+    end
+end
