fix installing python

--- a/circle.yml
+++ b/circle.yml
@@ -42,12 +42,14 @@ dependencies:
 
   override:
     - git submodule update --init
-    # setup explicitly versions of python to correctly run scripts with python3 name 
-    - pyenv global 2.7.12 3.4.4
+    # setup explicitly versions of python to correctly run scripts with python3 name
     - make
     - make JAVA_HOME=/usr/lib/jvm/default-java themis_jni
     - sudo make install
     - sudo make themispp_install
+    - pyenv global 2.7.12 3.4.4
+    # set python from pyenv global accessible because we install with sudo
+    - sudo rm /usr/bin/python2 /usr/bin/python3 && sudo ln -s `which python2` /usr/bin/python2 && sudo ln -s `which python3` /usr/bin/python3
     - sudo make pythemis_install
     - sudo make rubythemis_install
     - sudo make phpthemis_install
