--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,40 @@ jobs:
       - run: coveralls-lcov -v --repo-token $COVERALLS_TOKEN coverage.info || true
       - run: $HOME/valgrind/bin/valgrind build_with_boringssl/tests/soter_test 2>&1 | grep "ERROR SUMMARY\|definitely lost\|indirectly lost\|possibly lost" | awk '{sum += $4} END {print $0; if ( sum > 0 ) { exit 1 } }'
       - run: $HOME/valgrind/bin/valgrind build_with_boringssl/tests/themis_test 2>&1 | grep "ERROR SUMMARY\|definitely lost\|indirectly lost\|possibly lost" | awk '{sum += $4} END {print $0; if ( sum > 0 ) { exit 1 } }'
+
+  integration_tests:
+    docker:
+      - image: cossacklabs/android-build
+    environment:
+      GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
+      CFLAGS: "-DCIRICLE_TEST"
+    steps:
+      # dependencies
+      - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev python python-setuptools python3 python3-setuptools ruby-dev npm lcov libc6-dbg rsync software-properties-common
+      - run: sudo ln -sf /usr/bin/gcov-5 /usr/bin/gcov
+      - run: sudo gem install coveralls-lcov
+      - run: go get github.com/mattn/goveralls
+      # ruby rvm repository
+      - run: sudo apt-add-repository -y ppa:rael-gc/rvm
+      - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install rvm
+
+      # themis
+      - checkout
+      - run: make
+      - run: make JAVA_HOME=/usr/lib/jvm/default-java themis_jni
+      - run: sudo make install
+      - run: sudo make themispp_install
+      - run: sudo make pythemis_install
+      - run: sudo make rubythemis_install
+
+      - run: make prepare_tests_all
+      - run: mkdir -p $HOME/go/src/$GOTHEMIS_IMPORT
+      - run: rsync -auv gothemis/ $HOME/go/src/$GOTHEMIS_IMPORT/
+
+      - run: sudo /sbin/ldconfig   
+      - run: ./tests/_integration/integration_total.sh
+
+
   # using this php5 image until we ensure tests are working for php7
   php5:
     docker:
@@ -115,3 +149,4 @@ workflows:
       - android
       - x86_64
       - php5
+      - integration_tests
