--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,7 +111,7 @@ jobs:
       # ruby rvm repository
       - run: sudo apt-add-repository -y ppa:rael-gc/rvm
       - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install rvm npm nodejs
-      - run: ln -s /usr/bin/nodejs /usr/bin/node
+      - run: sudo ln -sf /usr/bin/nodejs /usr/bin/node
 
       # themis
       - checkout
