--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,14 +104,14 @@ jobs:
       CFLAGS: "-DCIRICLE_TEST"
     steps:
       # dependencies
-      - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev python python-setuptools python3 python3-setuptools ruby-dev npm lcov libc6-dbg rsync software-properties-common
+      - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev python python-setuptools python3 python3-setuptools ruby-dev lcov libc6-dbg rsync software-properties-common
       - run: sudo ln -sf /usr/bin/gcov-5 /usr/bin/gcov
-      - run: sudo gem install coveralls-lcov
-      - run: go get github.com/mattn/goveralls
+      - run: sudo ln -sf /usr/bin/nodejs /usr/bin/node
       # ruby rvm repository
       - run: sudo apt-add-repository -y ppa:rael-gc/rvm
-      - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install rvm npm nodejs
-      - run: sudo ln -sf /usr/bin/nodejs /usr/bin/node
+      - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install rvm
+      # nodejs install (need to install fresh nodejs)
+      - run: cd $HOME && curl -sL https://deb.nodesource.com/setup_8.x -o nodesource_setup.sh && sudo bash nodesource_setup.sh && sudo apt-get -y install nodejs
 
       # themis
       - checkout
