generate integration test scripts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,9 +130,10 @@ jobs:
       - run: mkdir -p $HOME/go/src/$GOTHEMIS_IMPORT
       - run: rsync -auv gothemis/ $HOME/go/src/$GOTHEMIS_IMPORT/
 
-      - run: sudo /sbin/ldconfig   
-      - run: chmod u+x ./tests/_integration/integration_total.sh
-      - run: ./tests/_integration/integration_total.sh
+      - run: sudo /sbin/ldconfig
+      # generate integration tests
+      - run: python3 tests/_integration/tests_generator.py
+      - run: bash tests/_integration/integration_total.sh
       - run: bash tests/tools/check_keygen.sh
 
 
