update ios test to use both openssl and boringssl

--- a/tests/objcthemis/Podfile
+++ b/tests/objcthemis/Podfile
@@ -19,12 +19,24 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 inhibit_all_warnings!
 
-target :"objthemis" do
+target "objthemis" do
 
   # example should work with head
-  pod 'themis', :git => "https://github.com/cossacklabs/themis.git"
+  #pod 'themis', :git => "https://github.com/cossacklabs/themis.git"
+
+  pod 'themis', :git => 'https://github.com/cossacklabs/themis', :branch => 'vixentael/ios-boringssl'
 
 end
+
+target "objthemis_boring" do
+
+  # example should work with head
+  #pod 'themis/themis-boringssl', :git => "https://github.com/cossacklabs/themis.git"
+
+  pod 'themis/themis-boringssl', :git => 'https://github.com/cossacklabs/themis', :branch => 'vixentael/ios-boringssl'
+
+end
+
 
 post_install do |installer_representation|
     installer_representation.pods_project.targets.each do |target|
