--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,6 @@ xcuserdata
 *~.nib
 *.swp
 
-docs/examples/objc/Pods
-
 # additional rules
 DerivedData/
 .idea/
@@ -53,3 +51,15 @@ tests/phpthemis/composer.phar
 tests/phpthemis/composer.lock
 
 third_party/boringssl/.externalNativeBuild
+
+# php
+
+*.lai
+*.la
+*.lo
+
+# ios
+docs/examples/Themis-server/swift/Pods
+docs/examples/Themis-server/Obj-C/Pods
+docs/examples/swift/Pods
+docs/examples/objc/Pods
