Update Rust binding to v0.0.3
This is a cumulative update of rust-themis to version 0.0.3 from here:

    https://github.com/ilammy/rust-themis

You can see `git diff v0.0.2..v0.0.3` there for detailed changes.
Obviously, the diff does not apply as is and has been manually merged
into this repository, taking into account previous changes and the new
code layout.

Some notable changes since v0.0.2:

- Secure zeroing of key material is included into this update.

- Rust 2018 edition support and API documentation updates
  introduce a lot of diff clutter. Deal with it.

- Vendored build is back. It is mostly intended as a hack for
  docs.rs support rather than an actual use-case.

  This brings a new `libthemis-src` crate to contain the whole
  source code of Themis. It is implemented with a symbolic link
  to the top of the repository. Hopefully, this loop does not
  break anything anywhere...

  For one, symlink usage *has* broken `libthemis-src` compilation
  (due to a bug in 3rd-party crate) so vendored build is currently
  failing. We'll fix this issue later.

- There are some other interesting TODOs added and removed during
  the development. Just grep for them in you're interested.

These changes do not integrate rust-themis into the main build system.
It is possible to build rust-themis alone with Cargo, but the Makefile
does not know about us yet. This will be added later.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "themis"
-version = "0.0.2"
+version = "0.0.3"
+edition = "2018"
 authors = ["rust-themis developers"]
 description = "High-level cryptographic services for storage and messaging"
 homepage = "https://www.cossacklabs.com/themis/"
@@ -20,6 +21,23 @@ include = [
 
 [lib]
 path = "src/wrappers/themis/rust/src/lib.rs"
+
+[features]
+vendored = ["bindings/vendored"]
+
+[dependencies]
+bindings = { package = "libthemis-sys", path = "src/wrappers/themis/rust/libthemis-sys", version = "=0.0.3" }
+zeroize = "0.5.2"
+
+[dev-dependencies]
+byteorder = "1.2.7"
+clap = "2.32"
+log = "0.4.6"
+env_logger = "0.6.0"
+
+[package.metadata.docs.rs]
+features = ["vendored"]
+dependencies = ["libssl-dev"]
 
 [[example]]
 name = "keygen"
@@ -64,12 +82,3 @@ path = "tests/rust/secure_message.rs"
 [[test]]
 name = "secure_session"
 path = "tests/rust/secure_session.rs"
-
-[dependencies]
-libthemis-sys = { path = "src/wrappers/themis/rust/libthemis-sys", version = "=0.0.2" }
-
-[dev-dependencies]
-byteorder = "1.2.7"
-clap = "2.32"
-log = "0.4.5"
-env_logger = "0.5.13"
