Persist Cargo PATH for later build steps
CircleCI runs each build step in a separate shell. Therefore we lose
environment variables set by "source ~/.cargo/env" during rustup
installation.

Append the environment configuration file to $BASH_ENV in order to
set the PATH correctly for next commands. This is a special file
read by CircleCI's bash.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
           keys:
             - rust
 
-      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y && source ~/.cargo/env && cargo --version && rustc --version
+      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y && cat ~/.cargo/env >> $BASH_ENV && source ~/.cargo/env && cargo --version && rustc --version
       - run: rustup component add clippy
       - run: rustup component add rustfmt
       - run: cargo deadlinks --version || cargo install cargo-deadlinks
