Clarify the source of "curl | sh" instructions
I'm not a fan of this kind of installation that downloads random stuff
from the Internet, but we'll have to live with it for a while, until
Rust is stable enough for disto-packaged versions not becoming outdated
after half a year.

Let's at least add a comment about the source of the spell below so
that it can be properly audited.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,8 @@ jobs:
           keys:
             - rust
 
+      # Install Rust toolchain (stable) via rustup
+      # Instructions taken from https://rustup.rs
       - run: curl https://sh.rustup.rs -sSf | sh -s -- -y && cat ~/.cargo/env >> $BASH_ENV && source ~/.cargo/env && cargo --version && rustc --version
       - run: rustup component add clippy
       - run: rustup component add rustfmt
